# jupyter-cpp-wrapperkernel

./: Dockerfile  LICENSE.txt  README.md  pyproject.toml  supervisord.conf
src/jupyter_cpp_wrapperkernel/: __main__.py  constants.py  cppkernel.py  kernelsubprocess.py  magicparsers.py
src/jupyter_cpp_wrapperkernel/scripts/: install.py
src/jupyter_cpp_wrapperkernel/vin/: vin_pb2.py  vin_pb2.pyi  vin_pb2_grpc.py
